--- a/classes/RequestLogAnalyzer/FileFormat/Merb.html
+++ b/classes/RequestLogAnalyzer/FileFormat/Merb.html
@@ -93,6 +93,19 @@
     <div id="section">
 
 
+    <div id="constants-list">
+      <h3 class="section-bar">Constants</h3>
+
+      <div class="name-list">
+        <table summary="Constants">
+        <tr class="top-aligned-row context-row">
+          <td class="context-item-name">REQUEST_CATEGORIZER</td>
+          <td>=</td>
+          <td class="context-item-value">Proc.new do |request|        category = &quot;#{request[:controller]}##{request[:action]}&quot;</td>
+        </tr>
+        </table>
+      </div>
+    </div>
 
 
 
