--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -44,6 +44,7 @@
     <a href="classes/RequestLogAnalyzer/FileFormat/Merb.html">RequestLogAnalyzer::FileFormat::Merb</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Rails.html">RequestLogAnalyzer::FileFormat::Rails</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/RailsDevelopment.html">RequestLogAnalyzer::FileFormat::RailsDevelopment</a><br />
+    <a href="classes/RequestLogAnalyzer/FileFormat/RailsDevelopment/Request.html">RequestLogAnalyzer::FileFormat::RailsDevelopment::Request</a><br />
     <a href="classes/RequestLogAnalyzer/FileFormat/Request.html">RequestLogAnalyzer::FileFormat::Request</a><br />
     <a href="classes/RequestLogAnalyzer/Filter.html">RequestLogAnalyzer::Filter</a><br />
     <a href="classes/RequestLogAnalyzer/Filter/Anonymize.html">RequestLogAnalyzer::Filter::Anonymize</a><br />
