--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -23,6 +23,7 @@
     <a href="files/README_rdoc.html">README.rdoc</a><br />
     <a href="files/lib/cli/command_line_arguments_rb.html">lib/cli/command_line_arguments.rb</a><br />
     <a href="files/lib/cli/progressbar_rb.html">lib/cli/progressbar.rb</a><br />
+    <a href="files/lib/cli/tools_rb.html">lib/cli/tools.rb</a><br />
     <a href="files/lib/request_log_analyzer_rb.html">lib/request_log_analyzer.rb</a><br />
     <a href="files/lib/request_log_analyzer/aggregator_rb.html">lib/request_log_analyzer/aggregator.rb</a><br />
     <a href="files/lib/request_log_analyzer/aggregator/database_rb.html">lib/request_log_analyzer/aggregator/database.rb</a><br />
