--- a/classes/RequestLogAnalyzer/Filter/Field.html
+++ b/classes/RequestLogAnalyzer/Filter/Field.html
@@ -107,8 +107,9 @@ rejected.
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000132">filter</a>&nbsp;&nbsp;
-      <a href="#M000131">prepare</a>&nbsp;&nbsp;
+      <a href="#M000158">filter</a>&nbsp;&nbsp;
+      <a href="#M000156">new</a>&nbsp;&nbsp;
+      <a href="#M000157">setup_filter</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -151,13 +152,39 @@ rejected.
 
     <!-- if method_list -->
     <div id="methods">
-      <h3 class="section-bar">Public Instance methods</h3>
+      <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000132" class="method-detail">
-        <a name="M000132"></a>
+      <div id="method-M000156" class="method-detail">
+        <a name="M000156"></a>
 
         <div class="method-heading">
-          <a href="#M000132" class="method-signature">
+          <a href="#M000156" class="method-signature">
+          <span class="method-name">new</span><span class="method-args">(file_format, options = {})</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000156-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000156-source">
+<pre>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 12</span>
+12:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-identifier">options</span> = {})
+13:       <span class="ruby-keyword kw">super</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-identifier">options</span>)
+14:       <span class="ruby-identifier">setup_filter</span>
+15:     <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+      <h3 class="section-bar">Public Instance methods</h3>
+
+      <div id="method-M000158" class="method-detail">
+        <a name="M000158"></a>
+
+        <div class="method-heading">
+          <a href="#M000158" class="method-signature">
           <span class="method-name">filter</span><span class="method-args">(request)</span>
           </a>
         </div>
@@ -170,27 +197,27 @@ nil otherwise. <tt>request</tt> <a href="../Request.html">Request</a>
 Object
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000132-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000132-source">
+            onclick="toggleCode('M000158-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000158-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 29</span>
-29:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
-30:       <span class="ruby-identifier">found_field</span> = <span class="ruby-identifier">request</span>.<span class="ruby-identifier">every</span>(<span class="ruby-ivar">@field</span>).<span class="ruby-identifier">any?</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">value</span><span class="ruby-operator">|</span> <span class="ruby-ivar">@value</span> <span class="ruby-operator">===</span> <span class="ruby-identifier">value</span>.<span class="ruby-identifier">to_s</span> }      
-31:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-operator">!</span><span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:select</span>
-32:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:reject</span>
-33:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
-34:     <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 34</span>
+34:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
+35:       <span class="ruby-identifier">found_field</span> = <span class="ruby-identifier">request</span>.<span class="ruby-identifier">every</span>(<span class="ruby-ivar">@field</span>).<span class="ruby-identifier">any?</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">value</span><span class="ruby-operator">|</span> <span class="ruby-ivar">@value</span> <span class="ruby-operator">===</span> <span class="ruby-identifier">value</span>.<span class="ruby-identifier">to_s</span> }      
+36:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-operator">!</span><span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:select</span>
+37:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">found_field</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@mode</span> <span class="ruby-operator">==</span> <span class="ruby-identifier">:reject</span>
+38:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+39:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
       </div>
 
-      <div id="method-M000131" class="method-detail">
-        <a name="M000131"></a>
+      <div id="method-M000157" class="method-detail">
+        <a name="M000157"></a>
 
         <div class="method-heading">
-          <a href="#M000131" class="method-signature">
-          <span class="method-name">prepare</span><span class="method-args">()</span>
+          <a href="#M000157" class="method-signature">
+          <span class="method-name">setup_filter</span><span class="method-args">()</span>
           </a>
         </div>
       
@@ -199,21 +226,21 @@ Object
 Setup mode, field and value.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000131-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000131-source">
+            onclick="toggleCode('M000157-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000157-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 13</span>
-13:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">prepare</span>
-14:       <span class="ruby-ivar">@mode</span> = (<span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:mode</span>] <span class="ruby-operator">||</span> <span class="ruby-identifier">:accept</span>).<span class="ruby-identifier">to_sym</span>
-15:       <span class="ruby-ivar">@field</span> = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:field</span>].<span class="ruby-identifier">to_sym</span>
-16:       
-17:       <span class="ruby-comment cmt"># Convert the timestamp to the correct formats for quick timestamp comparisons</span>
-18:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>].<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">String</span>) <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>][<span class="ruby-value">0</span>, <span class="ruby-value">1</span>] <span class="ruby-operator">==</span> <span class="ruby-value str">'/'</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>][<span class="ruby-value">-1</span>, <span class="ruby-value">1</span>] <span class="ruby-operator">==</span> <span class="ruby-value str">'/'</span>
-19:         <span class="ruby-ivar">@value</span> = <span class="ruby-constant">Regexp</span>.<span class="ruby-identifier">new</span>(<span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>][<span class="ruby-value">1</span><span class="ruby-operator">..</span><span class="ruby-value">-2</span>])
-20:       <span class="ruby-keyword kw">else</span>
-21:         <span class="ruby-ivar">@value</span> = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>] <span class="ruby-comment cmt"># TODO: convert value?</span>
-22:       <span class="ruby-keyword kw">end</span>
-23:     <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/field.rb, line 18</span>
+18:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">setup_filter</span>
+19:       <span class="ruby-ivar">@mode</span> = (<span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:mode</span>] <span class="ruby-operator">||</span> <span class="ruby-identifier">:accept</span>).<span class="ruby-identifier">to_sym</span>
+20:       <span class="ruby-ivar">@field</span> = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:field</span>].<span class="ruby-identifier">to_sym</span>
+21:       
+22:       <span class="ruby-comment cmt"># Convert the timestamp to the correct formats for quick timestamp comparisons</span>
+23:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>].<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">String</span>) <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>][<span class="ruby-value">0</span>, <span class="ruby-value">1</span>] <span class="ruby-operator">==</span> <span class="ruby-value str">'/'</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>][<span class="ruby-value">-1</span>, <span class="ruby-value">1</span>] <span class="ruby-operator">==</span> <span class="ruby-value str">'/'</span>
+24:         <span class="ruby-ivar">@value</span> = <span class="ruby-constant">Regexp</span>.<span class="ruby-identifier">new</span>(<span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>][<span class="ruby-value">1</span><span class="ruby-operator">..</span><span class="ruby-value">-2</span>])
+25:       <span class="ruby-keyword kw">else</span>
+26:         <span class="ruby-ivar">@value</span> = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:value</span>] <span class="ruby-comment cmt"># TODO: convert value?</span>
+27:       <span class="ruby-keyword kw">end</span>
+28:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
