--- a/classes/RequestLogAnalyzer/Filter/Timespan.html
+++ b/classes/RequestLogAnalyzer/Filter/Timespan.html
@@ -102,8 +102,9 @@ Reject all requests not in given timespan Options
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000127">filter</a>&nbsp;&nbsp;
-      <a href="#M000126">prepare</a>&nbsp;&nbsp;
+      <a href="#M000153">filter</a>&nbsp;&nbsp;
+      <a href="#M000151">new</a>&nbsp;&nbsp;
+      <a href="#M000152">setup_filter</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -141,13 +142,39 @@ Reject all requests not in given timespan Options
 
     <!-- if method_list -->
     <div id="methods">
-      <h3 class="section-bar">Public Instance methods</h3>
+      <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000127" class="method-detail">
-        <a name="M000127"></a>
+      <div id="method-M000151" class="method-detail">
+        <a name="M000151"></a>
 
         <div class="method-heading">
-          <a href="#M000127" class="method-signature">
+          <a href="#M000151" class="method-signature">
+          <span class="method-name">new</span><span class="method-args">(file_format, options = {})</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000151-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000151-source">
+<pre>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/timespan.rb, line 11</span>
+11:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-identifier">options</span> = {})
+12:       <span class="ruby-keyword kw">super</span>(<span class="ruby-identifier">file_format</span>, <span class="ruby-identifier">options</span>)
+13:       <span class="ruby-identifier">setup_filter</span>
+14:     <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+      <h3 class="section-bar">Public Instance methods</h3>
+
+      <div id="method-M000153" class="method-detail">
+        <a name="M000153"></a>
+
+        <div class="method-heading">
+          <a href="#M000153" class="method-signature">
           <span class="method-name">filter</span><span class="method-args">(request)</span>
           </a>
         </div>
@@ -166,32 +193,32 @@ Returns nil otherwise <tt>request</tt> <a
 href="../Request.html">Request</a> object.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000127-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000127-source">
+            onclick="toggleCode('M000153-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000153-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/timespan.rb, line 24</span>
-24:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
-25:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@before</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-ivar">@before</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span>
-26:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
-27:       <span class="ruby-keyword kw">elsif</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@before</span>.<span class="ruby-identifier">nil?</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span>
-28:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
-29:       <span class="ruby-keyword kw">elsif</span> <span class="ruby-ivar">@before</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@after</span>.<span class="ruby-identifier">nil?</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-ivar">@before</span> 
-30:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
-31:       <span class="ruby-keyword kw">end</span>
-32: 
-33:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span>
-34:     <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/timespan.rb, line 30</span>
+30:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">filter</span>(<span class="ruby-identifier">request</span>)
+31:       <span class="ruby-keyword kw">if</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@before</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-ivar">@before</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span>
+32:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+33:       <span class="ruby-keyword kw">elsif</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@before</span>.<span class="ruby-identifier">nil?</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@after</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span>
+34:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+35:       <span class="ruby-keyword kw">elsif</span> <span class="ruby-ivar">@before</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-ivar">@after</span>.<span class="ruby-identifier">nil?</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-identifier">request</span>.<span class="ruby-identifier">timestamp</span> <span class="ruby-operator">&lt;=</span> <span class="ruby-ivar">@before</span> 
+36:         <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">request</span>
+37:       <span class="ruby-keyword kw">end</span>
+38: 
+39:       <span class="ruby-keyword kw">return</span> <span class="ruby-keyword kw">nil</span>
+40:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
       </div>
 
-      <div id="method-M000126" class="method-detail">
-        <a name="M000126"></a>
+      <div id="method-M000152" class="method-detail">
+        <a name="M000152"></a>
 
         <div class="method-heading">
-          <a href="#M000126" class="method-signature">
-          <span class="method-name">prepare</span><span class="method-args">()</span>
+          <a href="#M000152" class="method-signature">
+          <span class="method-name">setup_filter</span><span class="method-args">()</span>
           </a>
         </div>
       
@@ -201,14 +228,14 @@ Convert the timestamp to the correct formats for quick timestamp
 comparisons. These are stored in the before and after attr_reader fields.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000126-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000126-source">
+            onclick="toggleCode('M000152-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000152-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/timespan.rb, line 13</span>
-13:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">prepare</span>
-14:       <span class="ruby-ivar">@after</span>  = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:after</span>].<span class="ruby-identifier">strftime</span>(<span class="ruby-value str">'%Y%m%d%H%M%S'</span>).<span class="ruby-identifier">to_i</span>  <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">options</span>[<span class="ruby-identifier">:after</span>]     
-15:       <span class="ruby-ivar">@before</span> = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:before</span>].<span class="ruby-identifier">strftime</span>(<span class="ruby-value str">'%Y%m%d%H%M%S'</span>).<span class="ruby-identifier">to_i</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">options</span>[<span class="ruby-identifier">:before</span>]
-16:     <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/filter/timespan.rb, line 19</span>
+19:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">setup_filter</span>
+20:       <span class="ruby-ivar">@after</span>  = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:after</span>].<span class="ruby-identifier">strftime</span>(<span class="ruby-value str">'%Y%m%d%H%M%S'</span>).<span class="ruby-identifier">to_i</span>  <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">options</span>[<span class="ruby-identifier">:after</span>]     
+21:       <span class="ruby-ivar">@before</span> = <span class="ruby-ivar">@options</span>[<span class="ruby-identifier">:before</span>].<span class="ruby-identifier">strftime</span>(<span class="ruby-value str">'%Y%m%d%H%M%S'</span>).<span class="ruby-identifier">to_i</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">options</span>[<span class="ruby-identifier">:before</span>]
+22:     <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
