--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Sat Jan 24 08:08:39 +0100 2009</td>
+      <td>Thu Jan 29 22:45:27 +0100 2009</td>
     </tr>
     </table>
   </div>
@@ -76,7 +76,7 @@ Rails and Merb to produce a performance report. Its purpose is to find what
 actions are best candidates for optimization.
 </p>
 <ul>
-<li>Analyzes Rails log files (all versions)
+<li>Analyzes Rails log files (all versions), Merb logs, or any other log format
 
 </li>
 <li>Can combine multiple files (handy if you are using logrotate)
