Publishing newest RDoc documentation for request-log-analyzer

--- a/classes/RequestLogAnalyzer/Source.html
+++ b/classes/RequestLogAnalyzer/Source.html
@@ -55,6 +55,10 @@
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
+                <a href="../../files/lib/request_log_analyzer/source/database_rb.html">
+                lib/request_log_analyzer/source/database.rb
+                </a>
+        <br />
                 <a href="../../files/lib/request_log_analyzer/source/log_parser_rb.html">
                 lib/request_log_analyzer/source/log_parser.rb
                 </a>
@@ -126,6 +130,8 @@ the only implemented source.
       <h3 class="section-bar">Classes and Modules</h3>
 
       Class <a href="Source/Base.html" class="link">RequestLogAnalyzer::Source::Base</a><br />
+Class <a href="Source/CompletedLine.html" class="link">RequestLogAnalyzer::Source::CompletedLine</a><br />
+Class <a href="Source/Database.html" class="link">RequestLogAnalyzer::Source::Database</a><br />
 Class <a href="Source/LogParser.html" class="link">RequestLogAnalyzer::Source::LogParser</a><br />
 
     </div>
