--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -45,6 +45,7 @@
     <a href="files/lib/request_log_analyzer/output/html_rb.html">lib/request_log_analyzer/output/html.rb</a><br />
     <a href="files/lib/request_log_analyzer/request_rb.html">lib/request_log_analyzer/request.rb</a><br />
     <a href="files/lib/request_log_analyzer/source_rb.html">lib/request_log_analyzer/source.rb</a><br />
+    <a href="files/lib/request_log_analyzer/source/database_rb.html">lib/request_log_analyzer/source/database.rb</a><br />
     <a href="files/lib/request_log_analyzer/source/log_parser_rb.html">lib/request_log_analyzer/source/log_parser.rb</a><br />
     <a href="files/lib/request_log_analyzer/tracker_rb.html">lib/request_log_analyzer/tracker.rb</a><br />
     <a href="files/lib/request_log_analyzer/tracker/duration_rb.html">lib/request_log_analyzer/tracker/duration.rb</a><br />
