--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -64,6 +64,8 @@
     <a href="classes/RequestLogAnalyzer/Request/Converters.html">RequestLogAnalyzer::Request::Converters</a><br />
     <a href="classes/RequestLogAnalyzer/Source.html">RequestLogAnalyzer::Source</a><br />
     <a href="classes/RequestLogAnalyzer/Source/Base.html">RequestLogAnalyzer::Source::Base</a><br />
+    <a href="classes/RequestLogAnalyzer/Source/CompletedLine.html">RequestLogAnalyzer::Source::CompletedLine</a><br />
+    <a href="classes/RequestLogAnalyzer/Source/Database.html">RequestLogAnalyzer::Source::Database</a><br />
     <a href="classes/RequestLogAnalyzer/Source/LogParser.html">RequestLogAnalyzer::Source::LogParser</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker.html">RequestLogAnalyzer::Tracker</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Base.html">RequestLogAnalyzer::Tracker::Base</a><br />
