Publishing newest RDoc documentation for request-log-analyzer

--- a/classes/RequestLogAnalyzer/Source.html
+++ b/classes/RequestLogAnalyzer/Source.html
@@ -115,7 +115,7 @@ the only implemented source.
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000134">const_missing</a>&nbsp;&nbsp;
+      <a href="#M000147">const_missing</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -133,6 +133,8 @@ the only implemented source.
 Class <a href="Source/CompletedLine.html" class="link">RequestLogAnalyzer::Source::CompletedLine</a><br />
 Class <a href="Source/Database.html" class="link">RequestLogAnalyzer::Source::Database</a><br />
 Class <a href="Source/LogParser.html" class="link">RequestLogAnalyzer::Source::LogParser</a><br />
+Class <a href="Source/ProcessingLine.html" class="link">RequestLogAnalyzer::Source::ProcessingLine</a><br />
+Class <a href="Source/Request.html" class="link">RequestLogAnalyzer::Source::Request</a><br />
 
     </div>
 
@@ -146,11 +148,11 @@ Class <a href="Source/LogParser.html" class="link">RequestLogAnalyzer::Source::L
     <div id="methods">
       <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000134" class="method-detail">
-        <a name="M000134"></a>
+      <div id="method-M000147" class="method-detail">
+        <a name="M000147"></a>
 
         <div class="method-heading">
-          <a href="#M000134" class="method-signature">
+          <a href="#M000147" class="method-signature">
           <span class="method-name">const_missing</span><span class="method-args">(const)</span>
           </a>
         </div>
@@ -169,8 +171,8 @@ href="Source.html">RequestLogAnalyzer::Source</a> namespace.
 </td></tr>
 </table>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000134-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000134-source">
+            onclick="toggleCode('M000147-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000147-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/source.rb, line 14</span>
 14:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
