--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Fri Jun 12 22:28:17 +0200 2009</td>
+      <td>Wed Jul 15 17:52:14 +0200 2009</td>
     </tr>
     </table>
   </div>
@@ -77,9 +77,11 @@ actions are best candidates for optimization.
 </p>
 <ul>
 <li>Analyzes Rails log files (all versions), Merb logs, or any other log format
+you specify
 
 </li>
-<li>Can combine multiple files (handy if you are using logrotate)
+<li>Combines multiple files and decompresses compressed files (handy if you are
+using logrotate)
 
 </li>
 <li>Uses several metrics, including cumulative request time, average request
@@ -88,10 +90,7 @@ statuses, Rails action cache statistics, etc.) (Sample output: <a
 href="http://wiki.github.com/wvanbergen/request-log-analyzer/sample-output">wiki.github.com/wvanbergen/request-log-analyzer/sample-output</a>)
 
 </li>
-<li>Low memory footprint (server-safe)
-
-</li>
-<li>Fast
+<li>Low memory footprint and reasonably fast (server-safe)
 
 </li>
 <li>MIT licensed
@@ -135,13 +134,19 @@ project&#8216;s wiki: <a
 href="http://wiki.github.com/wvanbergen/request-log-analyzer/basic-usage">wiki.github.com/wvanbergen/request-log-analyzer/basic-usage</a>
 </p>
 <h2>Additional information</h2>
+<p>
+Do you have a rails application that is not performing as it should? If you
+need an expert to analyze your application, feel free to contact either
+Willem van Bergen (willem@railsdoctors.com) or Bart ten Brinke
+(bart@railsdoctors.com).
+</p>
 <ul>
 <li>Project wiki at GitHub: <a
 href="http://wiki.github.com/wvanbergen/request-log-analyzer">wiki.github.com/wvanbergen/request-log-analyzer</a>
 
 </li>
-<li>RDoc documentation: <a
-href="http://wvanbergen.github.com/request-log-analyzer">wvanbergen.github.com/request-log-analyzer</a>
+<li>railsdoctors homepage: <a
+href="http://railsdoctors.com">railsdoctors.com</a>
 
 </li>
 <li>wvanbergen&#8216;s blog posts: <a
