--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -67,6 +67,8 @@
     <a href="classes/RequestLogAnalyzer/Source/CompletedLine.html">RequestLogAnalyzer::Source::CompletedLine</a><br />
     <a href="classes/RequestLogAnalyzer/Source/Database.html">RequestLogAnalyzer::Source::Database</a><br />
     <a href="classes/RequestLogAnalyzer/Source/LogParser.html">RequestLogAnalyzer::Source::LogParser</a><br />
+    <a href="classes/RequestLogAnalyzer/Source/ProcessingLine.html">RequestLogAnalyzer::Source::ProcessingLine</a><br />
+    <a href="classes/RequestLogAnalyzer/Source/Request.html">RequestLogAnalyzer::Source::Request</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker.html">RequestLogAnalyzer::Tracker</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Base.html">RequestLogAnalyzer::Tracker::Base</a><br />
     <a href="classes/RequestLogAnalyzer/Tracker/Duration.html">RequestLogAnalyzer::Tracker::Duration</a><br />
