--- a/classes/RequestLogAnalyzer/Output.html
+++ b/classes/RequestLogAnalyzer/Output.html
@@ -82,7 +82,7 @@
 
     <div id="description">
       <p>
-coding: utf-8
+Module for generating output
 </p>
 
     </div>
@@ -134,14 +134,17 @@ Class <a href="Output/HTML.html" class="link">RequestLogAnalyzer::Output::HTML</
         </div>
       
         <div class="method-description">
+          <p>
+Load class files if needed
+</p>
           <p><a class="source-toggle" href="#"
             onclick="toggleCode('M000007-source');return false;">[Source]</a></p>
           <div class="method-source-code" id="M000007-source">
 <pre>
-   <span class="ruby-comment cmt"># File lib/request_log_analyzer/output.rb, line 3</span>
-3:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
-4:     <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">load_default_class_file</span>(<span class="ruby-keyword kw">self</span>, <span class="ruby-identifier">const</span>)
-5:   <span class="ruby-keyword kw">end</span>
+   <span class="ruby-comment cmt"># File lib/request_log_analyzer/output.rb, line 5</span>
+5:   <span class="ruby-keyword kw">def</span> <span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">const_missing</span>(<span class="ruby-identifier">const</span>)
+6:     <span class="ruby-constant">RequestLogAnalyzer</span><span class="ruby-operator">::</span><span class="ruby-identifier">load_default_class_file</span>(<span class="ruby-keyword kw">self</span>, <span class="ruby-identifier">const</span>)
+7:   <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
