--- a/classes/RequestLogAnalyzer/Output/FixedWidth/Color.html
+++ b/classes/RequestLogAnalyzer/Output/FixedWidth/Color.html
@@ -72,6 +72,12 @@
 
   <div id="contextContent">
 
+    <div id="description">
+      <p>
+Colorize module
+</p>
+
+    </div>
 
 
    </div>
@@ -80,7 +86,7 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000034">colorize</a>&nbsp;&nbsp;
+      <a href="#M000035">colorize</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -120,44 +126,57 @@
     <div id="methods">
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000034" class="method-detail">
-        <a name="M000034"></a>
+      <div id="method-M000035" class="method-detail">
+        <a name="M000035"></a>
 
         <div class="method-heading">
-          <a href="#M000034" class="method-signature">
+          <a href="#M000035" class="method-signature">
           <span class="method-name">colorize</span><span class="method-args">(text, *options)</span>
           </a>
         </div>
       
         <div class="method-description">
-          <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000034-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000034-source">
+          <p>
+Colorize text <tt>text</tt> The text to <a
+href="Color.html#M000035">colorize</a> Options
+</p>
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/output/fixed_width.rb, line 19</span>
-19:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">colorize</span>(<span class="ruby-identifier">text</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">options</span>)
-20:     
-21:         <span class="ruby-identifier">font_style</span>       = <span class="ruby-value str">''</span>
-22:         <span class="ruby-identifier">foreground_color</span> = <span class="ruby-value str">'0'</span>
-23:         <span class="ruby-identifier">background_color</span> = <span class="ruby-value str">''</span>
-24:       
-25:         <span class="ruby-identifier">options</span>.<span class="ruby-identifier">each</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">option</span><span class="ruby-operator">|</span>
-26:           <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">option</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Symbol</span>)
-27:             <span class="ruby-identifier">foreground_color</span> = <span class="ruby-node">&quot;3#{COLORS[option]}&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">option</span>)
-28:             <span class="ruby-identifier">font_style</span>       = <span class="ruby-node">&quot;#{STYLES[option]};&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">STYLES</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">option</span>)          
-29:           <span class="ruby-keyword kw">elsif</span> <span class="ruby-identifier">option</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Hash</span>)
-30:             <span class="ruby-identifier">options</span>.<span class="ruby-identifier">each</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">key</span>, <span class="ruby-identifier">value</span><span class="ruby-operator">|</span>
-31:               <span class="ruby-keyword kw">case</span> <span class="ruby-identifier">key</span>
-32:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:color</span>;      <span class="ruby-identifier">foreground_color</span> = <span class="ruby-node">&quot;3#{COLORS[value]}&quot;</span>  <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
-33:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:background</span>; <span class="ruby-identifier">background_color</span> = <span class="ruby-node">&quot;4#{COLORS[value]};&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
-34:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:on</span>;         <span class="ruby-identifier">background_color</span> = <span class="ruby-node">&quot;4#{COLORS[value]};&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
-35:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:style</span>;      <span class="ruby-identifier">font_style</span>       = <span class="ruby-node">&quot;#{STYLES[value]};&quot;</span>  <span class="ruby-keyword kw">if</span> <span class="ruby-constant">STYLES</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
-36:               <span class="ruby-keyword kw">end</span>
-37:             <span class="ruby-keyword kw">end</span>
-38:           <span class="ruby-keyword kw">end</span>
-39:         <span class="ruby-keyword kw">end</span>
-40:         <span class="ruby-keyword kw">return</span> <span class="ruby-node">&quot;\e[#{background_color}#{font_style}#{foreground_color}m#{text}\e[0m&quot;</span>
-41:       <span class="ruby-keyword kw">end</span>
+ * &lt;tt&gt;:background&lt;/tt&gt; The background color to paint. Defined in Color::COLORS
+ * &lt;tt&gt;:color&lt;/tt&gt; The foreground color to paint. Defined in Color::COLORS
+ * &lt;tt&gt;:on&lt;/tt&gt; Alias for :background
+ * &lt;tt&gt;:style&lt;/tt&gt; Font style, defined in Color::STYLES
+</pre>
+<p>
+Returns ASCII colored string
+</p>
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000035-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000035-source">
+<pre>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/output/fixed_width.rb, line 30</span>
+30:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">colorize</span>(<span class="ruby-identifier">text</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">options</span>)
+31:     
+32:         <span class="ruby-identifier">font_style</span>       = <span class="ruby-value str">''</span>
+33:         <span class="ruby-identifier">foreground_color</span> = <span class="ruby-value str">'0'</span>
+34:         <span class="ruby-identifier">background_color</span> = <span class="ruby-value str">''</span>
+35:       
+36:         <span class="ruby-identifier">options</span>.<span class="ruby-identifier">each</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">option</span><span class="ruby-operator">|</span>
+37:           <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">option</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Symbol</span>)
+38:             <span class="ruby-identifier">foreground_color</span> = <span class="ruby-node">&quot;3#{COLORS[option]}&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">option</span>)
+39:             <span class="ruby-identifier">font_style</span>       = <span class="ruby-node">&quot;#{STYLES[option]};&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">STYLES</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">option</span>)          
+40:           <span class="ruby-keyword kw">elsif</span> <span class="ruby-identifier">option</span>.<span class="ruby-identifier">kind_of?</span>(<span class="ruby-constant">Hash</span>)
+41:             <span class="ruby-identifier">options</span>.<span class="ruby-identifier">each</span> <span class="ruby-keyword kw">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">key</span>, <span class="ruby-identifier">value</span><span class="ruby-operator">|</span>
+42:               <span class="ruby-keyword kw">case</span> <span class="ruby-identifier">key</span>
+43:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:color</span>;      <span class="ruby-identifier">foreground_color</span> = <span class="ruby-node">&quot;3#{COLORS[value]}&quot;</span>  <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
+44:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:background</span>; <span class="ruby-identifier">background_color</span> = <span class="ruby-node">&quot;4#{COLORS[value]};&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
+45:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:on</span>;         <span class="ruby-identifier">background_color</span> = <span class="ruby-node">&quot;4#{COLORS[value]};&quot;</span> <span class="ruby-keyword kw">if</span> <span class="ruby-constant">COLORS</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
+46:               <span class="ruby-keyword kw">when</span> <span class="ruby-identifier">:style</span>;      <span class="ruby-identifier">font_style</span>       = <span class="ruby-node">&quot;#{STYLES[value]};&quot;</span>  <span class="ruby-keyword kw">if</span> <span class="ruby-constant">STYLES</span>.<span class="ruby-identifier">include?</span>(<span class="ruby-identifier">value</span>)
+47:               <span class="ruby-keyword kw">end</span>
+48:             <span class="ruby-keyword kw">end</span>
+49:           <span class="ruby-keyword kw">end</span>
+50:         <span class="ruby-keyword kw">end</span>
+51:         <span class="ruby-keyword kw">return</span> <span class="ruby-node">&quot;\e[#{background_color}#{font_style}#{foreground_color}m#{text}\e[0m&quot;</span>
+52:       <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
