--- a/classes/RequestLogAnalyzer/Output/FixedWidth/Monochrome.html
+++ b/classes/RequestLogAnalyzer/Output/FixedWidth/Monochrome.html
@@ -72,6 +72,12 @@
 
   <div id="contextContent">
 
+    <div id="description">
+      <p>
+Mixin module. Will disable any colorizing.
+</p>
+
+    </div>
 
 
    </div>
@@ -80,7 +86,7 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000033">colorize</a>&nbsp;&nbsp;
+      <a href="#M000034">colorize</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -102,24 +108,24 @@
     <div id="methods">
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000033" class="method-detail">
-        <a name="M000033"></a>
+      <div id="method-M000034" class="method-detail">
+        <a name="M000034"></a>
 
         <div class="method-heading">
-          <a href="#M000033" class="method-signature">
+          <a href="#M000034" class="method-signature">
           <span class="method-name">colorize</span><span class="method-args">(text, *options)</span>
           </a>
         </div>
       
         <div class="method-description">
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000033-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000033-source">
+            onclick="toggleCode('M000034-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000034-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/request_log_analyzer/output/fixed_width.rb, line 9</span>
- 9:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">colorize</span>(<span class="ruby-identifier">text</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">options</span>)
-10:         <span class="ruby-identifier">text</span>
-11:       <span class="ruby-keyword kw">end</span>
+    <span class="ruby-comment cmt"># File lib/request_log_analyzer/output/fixed_width.rb, line 10</span>
+10:       <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">colorize</span>(<span class="ruby-identifier">text</span>, <span class="ruby-operator">*</span><span class="ruby-identifier">options</span>)
+11:         <span class="ruby-identifier">text</span>
+12:       <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
