--- a/classes/RequestLogAnalyzer/Source/Base.html
+++ b/classes/RequestLogAnalyzer/Source/Base.html
@@ -85,7 +85,7 @@ should inherit from this class.
 </p>
 <p>
 A source implememtation should at least implement the <a
-href="Base.html#M000155">each_request</a> method, which should yield <a
+href="Base.html#M000169">each_request</a> method, which should yield <a
 href="../Request.html">RequestLogAnalyzer::Request</a> instances that will
 be fed through the pipleine.
 </p>
@@ -99,10 +99,10 @@ be fed through the pipleine.
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000155">each_request</a>&nbsp;&nbsp;
-      <a href="#M000156">finalize</a>&nbsp;&nbsp;
-      <a href="#M000153">new</a>&nbsp;&nbsp;
-      <a href="#M000154">prepare</a>&nbsp;&nbsp;
+      <a href="#M000169">each_request</a>&nbsp;&nbsp;
+      <a href="#M000170">finalize</a>&nbsp;&nbsp;
+      <a href="#M000167">new</a>&nbsp;&nbsp;
+      <a href="#M000168">prepare</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -133,8 +133,7 @@ be fed through the pipleine.
           <td class="context-item-name">current_request</td>
           <td class="context-item-value">&nbsp;[R]&nbsp;</td>
           <td class="context-item-desc">
-The current <a href="../Request.html">Request</a> object that is being
-parsed
+The current <a href="Request.html">Request</a> object that is being parsed
 
 </td>
         </tr>
@@ -180,11 +179,11 @@ The number of skipped lines because of warnings
     <div id="methods">
       <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000153" class="method-detail">
-        <a name="M000153"></a>
+      <div id="method-M000167" class="method-detail">
+        <a name="M000167"></a>
 
         <div class="method-heading">
-          <a href="#M000153" class="method-signature">
+          <a href="#M000167" class="method-signature">
           <span class="method-name">new</span><span class="method-args">(format, options = {})</span>
           </a>
         </div>
@@ -204,8 +203,8 @@ href="../Source.html">Source</a> implementation
 </td></tr>
 </table>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000153-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000153-source">
+            onclick="toggleCode('M000167-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000167-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/source.rb, line 45</span>
 45:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">initialize</span>(<span class="ruby-identifier">format</span>, <span class="ruby-identifier">options</span> = {})
@@ -219,11 +218,11 @@ href="../Source.html">Source</a> implementation
 
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000155" class="method-detail">
-        <a name="M000155"></a>
+      <div id="method-M000169" class="method-detail">
+        <a name="M000169"></a>
 
         <div class="method-heading">
-          <a href="#M000155" class="method-signature">
+          <a href="#M000169" class="method-signature">
           <span class="method-name">each_request</span><span class="method-args">(options = {}) {|request| ...}</span>
           </a>
         </div>
@@ -240,8 +239,8 @@ href="../Request.html">RequestLogAnalyzer::Request</a>.
 </td></tr>
 </table>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000155-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000155-source">
+            onclick="toggleCode('M000169-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000169-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/source.rb, line 59</span>
 59:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">each_request</span>(<span class="ruby-identifier">options</span> = {}, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block</span>) <span class="ruby-comment cmt"># :yields: request</span>
@@ -252,11 +251,11 @@ href="../Request.html">RequestLogAnalyzer::Request</a>.
         </div>
       </div>
 
-      <div id="method-M000156" class="method-detail">
-        <a name="M000156"></a>
+      <div id="method-M000170" class="method-detail">
+        <a name="M000170"></a>
 
         <div class="method-heading">
-          <a href="#M000156" class="method-signature">
+          <a href="#M000170" class="method-signature">
           <span class="method-name">finalize</span><span class="method-args">()</span>
           </a>
         </div>
@@ -264,13 +263,13 @@ href="../Request.html">RequestLogAnalyzer::Request</a>.
         <div class="method-description">
           <p>
 This function is called after <a
-href="Base.html#M000155">RequestLogAnalyzer::Source::Base#each_request</a>
+href="Base.html#M000169">RequestLogAnalyzer::Source::Base#each_request</a>
 finished. Any code to wrap up, free resources, etc. can be put in this
 method.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000156-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000156-source">
+            onclick="toggleCode('M000170-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000170-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/source.rb, line 65</span>
 65:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">finalize</span>
@@ -280,26 +279,26 @@ method.
         </div>
       </div>
 
-      <div id="method-M000154" class="method-detail">
-        <a name="M000154"></a>
+      <div id="method-M000168" class="method-detail">
+        <a name="M000168"></a>
 
         <div class="method-heading">
-          <a href="#M000154" class="method-signature">
+          <a href="#M000168" class="method-signature">
           <span class="method-name">prepare</span><span class="method-args">()</span>
           </a>
         </div>
       
         <div class="method-description">
           <p>
-The <a href="Base.html#M000154">prepare</a> method is called before the <a
-href="Base.html#M000155">RequestLogAnalyzer::Source::Base#each_request</a>
+The <a href="Base.html#M000168">prepare</a> method is called before the <a
+href="Base.html#M000169">RequestLogAnalyzer::Source::Base#each_request</a>
 method is called. Use this method to implement any initialization that
 should occur before this source can produce <a
-href="../Request.html">Request</a> instances.
+href="Request.html">Request</a> instances.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000154-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000154-source">
+            onclick="toggleCode('M000168-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000168-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/request_log_analyzer/source.rb, line 53</span>
 53:     <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">prepare</span>
