--- a/files/lib/request_log_analyzer/aggregator/database_rb.html
+++ b/files/lib/request_log_analyzer/aggregator/database_rb.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Fri Jun 12 22:28:17 +0200 2009</td>
+      <td>Wed Jun 24 19:54:31 +0200 2009</td>
     </tr>
     </table>
   </div>
@@ -75,6 +75,7 @@
       <div class="name-list">
       rubygems&nbsp;&nbsp;
       activerecord&nbsp;&nbsp;
+      yaml&nbsp;&nbsp;
       </div>
     </div>
 
