--- a/files/lib/request_log_analyzer/output_rb.html
+++ b/files/lib/request_log_analyzer/output_rb.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Fri Jun 12 22:28:17 +0200 2009</td>
+      <td>Wed Jun 24 19:54:31 +0200 2009</td>
     </tr>
     </table>
   </div>
@@ -68,6 +68,12 @@
 
   <div id="contextContent">
 
+    <div id="description">
+      <p>
+Module for generating output
+</p>
+
+    </div>
 
 
    </div>
